<resources>
    <string name="app_name">妙手回声</string>

    <string name="no_myo_found">No Myo found!</string>
    <string name="first_do_a_scan">First, you need to find a Myo.\nPress the button to start a scan.</string>

    <!-- TODO About -->
    <string name="description">You can use this app to visualize raw EMG data from a Myo device. If you find a bug, feel free to report it :)</string>
    <string name="author">Nicola Corti</string>
    <string name="source_code">To access the source code press here</string>

    <string name="scan">Scan</string>
    <string name="control">Control</string>
    <string name="graph">Graph</string>
    <string name="export">Export</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="device_information">Device Information</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="select">Select</string>
    <string name="device_status">Device Status</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="device_control">Device Control</string>
    <string name="not_streaming">Not streaming</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="streaming_frequency">Streaming Frequency</string>
    <string name="trigger_vibration">Trigger Vibration</string>
    <string name="vibrate_short">Short</string>
    <string name="vibrate_medium">Medium</string>
    <string name="vibrate_long">Long</string>
    <string name="currently_streaming">Currently streaming…</string>
    <string name="_200hz">200Hz</string>
    <string name="templated_hz">%1$dhz</string>
    <string name="location_permission_denied_message">Myo EMG Visualizer can\'t work without Location permission!</string>
    <string name="write_permission_denied_message">Myo EMG Visualizer can\'t save a CSV file without Write permission!</string>
    <string name="onboarding_title_0">Welcome to Myo EMG Visualizer</string>
    <string name="onboarding_description_0">You can use this app to collect EMG data from your MYO</string>
    <string name="onboarding_description_1">Search for your Myo form the \'Scan\' page and Select your Myo from the list. In order to perform a scan we need the \'Location\' permission</string>
    <string name="onboarding_description_2">Select the frequency e start streaming form the \'Control\' page</string>
    <string name="onboarding_description_3">Visualize your data in the \'Graph\' page</string>
    <string name="onboarding_description_4">Export the collected data as a CSV in the \'Export page</string>
    <string name="zero">0</string>
    <string name="points_to_export">Points to Export</string>
    <string name="save_export">Save Export</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="save_info_message">You can export the collected points to a CSV file or use the Share dialog.</string>
    <string name="export_points">Export Points</string>
    <string name="stop_collecting">Stop Collecting</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="scan_completed">Scan Completed!</string>
    <string name="start_a_streaming_nto_populate_the_graph">Start a streaming\nto populate the graph</string>

    <string name="phone_num_hint">请输入手机号码（中国大陆）</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="login_wechat">切换微信登陆</string>
    <string name="login_button_text">登录</string>
    <string name="appName">妙手回声</string>
    <string name="welcome_english">Welcome</string>
    <string name="welcome_chinese">欢迎使用双向手语交流系统</string>
    <string name="startCommunicate">开始交流</string>
    <string name="voiceRecognition">长按语音识别</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="to_return">返回</string>
    <string name="hint_endiText">请在这里输入想发送的信息</string>
    <string name="send">发送</string>
    <string name="是">是</string>
    <string name="否">否</string>
    <string name="hint_sign_confirm">以上手语是否正确?</string>
    <string name="hint_sign_recapture">是否重新采集手语</string>
    <string name="text_edit_hint">请在这里输入想要发送的信息</string>
    <string name="record">Record</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!--ijkPlayer-->
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>


    <string name="giraffe_player_url_empty">请指定播放视频的地址</string>
    <string name="small_problem">出现了点小问题,稍后重试</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>

</resources>
