<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <!-- receive bubble-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:id="@+id/message_receive_view"
        android:orientation="vertical">

        <!-- text display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bubble_triangle_r"
                android:layout_marginRight="-1px"
                android:layout_marginEnd="-1px" />

            <EditText
                android:id="@+id/msg_content_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"

                android:background="@drawable/bubble_box"
                android:gravity="start"
                android:text="啊啊啊啊啊"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="28sp" />
        </LinearLayout>
        <!-- sign confirm -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp" >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:id="@+id/sign_confirm_dialog">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sign_confirm"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/是"
                        android:textColor="@color/colorPrimary"
                        android:padding="10dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/button_sign_confirm_yes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/否"
                        android:id="@+id/button_sign_confirm_no" />
                </LinearLayout>
            </LinearLayout>
            <!-- sign recapture -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/sign_recapture_dialog"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_sign_recapture"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/是"
                        android:textColor="@color/colorPrimary"
                        android:padding="10dp"
                        android:layout_marginRight="30sp"
                        android:layout_marginEnd="30dp"
                        android:id="@+id/button_sign_recapture_yes" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimary"
                        android:padding="10dp"
                        android:text="@string/否"
                        android:id="@+id/button_sign_recapture_no" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <!-- send bubble-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message_send_view"
        android:layout_gravity="end"
        android:gravity="end"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:orientation="vertical">

        <!-- text display -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/msg_content_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sddddddddddddddddas"
                android:layout_gravity="end"
                android:padding="16dp"
                android:textColor="#000000"
                android:background="@drawable/bubble_box"
                android:textSize="28sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="-1px"
                android:layout_marginEnd="-1px"
                android:src="@drawable/bubble_triangle_l" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_msg_type_display" />

    </LinearLayout>

</LinearLayout>